--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+tamiko-<!DOCTYPE html>
 <!--
 AI HSR Risk Reference Tool v2.0
 Copyright (C) 2025 Tamiko Eto, TechInHSR
@@ -791,7 +791,7 @@ For commercial licensing inquiries: tamiko@techinhsr.com
             <p style="margin-top: 0.5rem;">
                 <a href="mailto:tamiko@techinhsr.com">Contact</a> | 
                 <a href="https://techinhsr.com" target="_blank">Website</a> | 
-                <a href="https://github.com/[your-username]/ai-hsr-risk-tool" target="_blank">GitHub</a>
+                <a href="https://github.com/etotamiko-lab/ai-hsr-risk-tool" target="_blank">GitHub</a>
             </p>
         </div>
     </footer>
